--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-ink": "^6.1.0"
   },
   "scripts": {
-    "dev": "next"
+    "dev": "next -p 3000",
+    "prestart": "next build",
+    "start": "next start -p ${PORT}"
   }
 }
